[Fix]: Fix AssetLog API